# watchy

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: accelerometer.rs  battery.rs  button.rs  display.rs  lib.rs  pins.rs
