[package]
authors = ["Dan Whitman <dwhitman44@gmail.com>"]
categories = ["embedded", "hardware-support"]
description = "Board support crate for the Watchy programmable smart watch"
# This may need to be a custom URL at some point for self-hosted documentation
#documentation = ""
edition = "2021"
keywords = ["esp-idf", "esp32"]
license = "MIT"
name = "watchy"
readme = "README.md"
repository = "https://github.com/kyp44/watchy"
version = "0.1.0"

[dependencies]
# Some improvements made to this crate have not yet been merged into the main project
#bma423 = {version = "0.0", git = "https://github.com/kyp44/bma423-rs"}
bma423 = {version = "0.0", path = "../bma423-rs"}
embedded-hal = "1.0.0-rc.1"
enumset = "1.1"
esp-idf-svc = {version = "0.47", default-features = false}
# Some improvements made to this crate have not yet been merged into the main project
#gdeh0154d67 = {version = "0.1", git = "https://gitlab.com/dwhitman44/gdeh0154d67"}
gdeh0154d67 = {version = "0.1", path = "../gdeh0154d67"}
rounded-div = "0.1"
thiserror = "1.0"

[features]
all = ["std", "alloc", "binstart", "embassy", "nightly", "native"]
alloc = ["esp-idf-svc/alloc"]
binstart = ["esp-idf-svc/binstart"]
default = ["alloc", "native", "std"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
  "esp-idf-svc/embassy-time-isr-queue",
]
native = ["esp-idf-svc/native"]
nightly = ["esp-idf-svc/nightly"]
std = ["alloc", "gdeh0154d67/std", "esp-idf-svc/std"]
