[package]
authors = ["Dan Whitman <dwhitman44@gmail.com>"]
categories = ["embedded", "hardware-support"]
description = "Board support crate for the Watchy programmable smart watch"
# This may need to be a custom URL at some point for self-hosted documentation
#documentation = ""
edition = "2021"
keywords = ["esp-idf", "esp32"]
license = "MIT"
name = "watchy"
readme = "README.md"
repository = "https://github.com/kyp44/watchy"
version = "0.1.0"

[patch.crates-io]
# This is currently needed due to this: https://github.com/ferrilab/ferrilab/issues/5
bitvec = {git = "https://github.com/ferrilab/ferrilab.git"}
# This is needed due to unreleased changes and the `bitvec` issue.
gdeh0154d67 = {git = "https://gitlab.com/dwhitman44/gdeh0154d67.git"}

[dependencies]
# The minimum version needs bumped once release on crates.io
bma423 = "0.0.3"
embedded-hal = "1.0.0"
enumset = "1.1.5"
esp-idf-svc = {version = "0.49.1", default-features = false}
# The minimum version needs bumped once release on crates.io
gdeh0154d67 = "0.2.0"
rounded-div = "0.1.2"
thiserror = "1.0.63"

[features]
all = ["std", "alloc", "embassy", "nightly"]
alloc = ["esp-idf-svc/alloc"]
default = ["alloc", "std"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]
nightly = ["esp-idf-svc/nightly"]
std = ["alloc", "gdeh0154d67/std", "esp-idf-svc/std"]
